--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     <form>
                                         <div class="row">
                                             <div class="col-12 col-md-8" style="font-size: 112.5% !important">
-                                                <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size" placeholder="Enter email address...">
+                                                <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size" placeholder="Rentre ton e-mail...">
                                             </div>
                                             <div class="col-12 col-md-4 pl-md-0 mt-3 mt-md-0">
                                                 <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size">Entreprendre</button>
@@ -215,13 +215,13 @@
                                 <form>
                                     <div class="row">
                                         <div class="col-12 col-md-8">
-                                            <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size" placeholder="Enter email address...">
+                                            <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size" placeholder="Rentre ton e-mail...">
                                         </div>
                                         <div class="col-12 col-md-4 pl-md-0 mt-3 mt-md-0">
-                                            <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size">Start Free Trial</button>
+                                            <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size">Entreprendre</button>
                                         </div>
                                     </div>
-                                    <div class="text-center text-md-left sm-font-size text-gray">no credit card required</div>
+                                    <div class="text-center text-md-left sm-font-size text-gray">Gratuit et span-free</div>
                                 </form>
                                 <!-- Empty Space -->
                                 <div class="md-space"></div>
@@ -348,37 +348,6 @@
                                 <!--/ End Empty Space -->
                                 <div class="text-center">
                                     <a href="#" class="btn btn-lg btn-primary md-font-size py-3 px-4 font-weight__700 text-blue">Decouvrir gratuitement</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--/ End CTA -->
-
-        <!-- CTA -->
-        <section class="CTA section bg-light">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-11 mx-auto">
-                        <div class="row align-items-center">
-                            <div class="col-12 col-lg-8">
-                                <div class="text-center text-lg-left mb-3 mb-lg-0">
-                                    <h2 class="md-font-size font-weight__700">
-                                        Lorem ipsum efficitur sed erat
-                                    </h2>
-                                    <p class="lead sm-font-size">
-                                        Praesent mollis, massa in auctor molestie, magna lorem semper mauris a venenatis turpis.
-                                    </p>
-                                    <div class="reviews text-black font-weight__500 sm-font-size">
-                                        1,234 reviews <span class="stars ml-2"><span class="text-primary px-1"><i class="fas fa-star"></i></span><span class="text-primary px-1"><i class="fas fa-star"></i></span><span class="text-primary px-1"><i class="fas fa-star"></i></span><span class="text-primary px-1"><i class="fas fa-star"></i></span><span class="text-gray px-1"><i class="fas fa-star"></i></span></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-lg-4">
-                                <div class="text-center text-lg-right">
-                                    <a href="#" class="btn btn-lg btn-primary base-font-size px-4 py-2">Try it free</a>
                                 </div>
                             </div>
                         </div>
