--- a/index.html
+++ b/index.html
@@ -92,6 +92,27 @@
             </section>
             <!--/ End Hero -->
         </div>
+        <section class="CTA section bg-light-gray">
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="text-center">
+                                    <h2 class="xl-font-size font-weight__700 text-blue">
+                                        Tu aimerais dédier ton temps libre à autre chose que les Happy Hour et découvrir comment l'entrepreneuriat peut t'aider à t'épanouir pleinement ?
+                                    </h2>
+                                    <h2 class="xl-font-size font-weight__700 text-blue">
+
+                                        Alors ARRÊTE TOUT - Parce que tu es à l’endroit idéal pour connecter avec des étudiants qui veulent se former et porter leur projet
+                                    </h2>
+
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Features -->
         <section class="features section bg-light">
             <div class="container">
@@ -101,7 +122,9 @@
                             <div class="col-12">
                                 <div class="text-center">
                                     <h2 class="xxl-font-size font-weight__700 text-blue">
-                                        Tu souhaiterais te cultiver sur le sujet mais tu ne sais pas à qui faire confiance parmis tous ces sites de ‘pseudo experts’?
+                                        Tu souhaiterais te former sur le sujet mais tu ne sais pas à qui faire confiance parmis tous ces sites de ‘pseudo experts’?
+
+
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="py-1"></div>
@@ -126,13 +149,13 @@
                                         </div>
                                         <div class="col-12 col-lg-9 pl-lg-0">
                                             <h3 class="base-font-size font-weight__700 mb-0 text-center text-lg-left">
-                                              La puissance de l'IA
+                                              Des ressources
                                             </h3>
                                             <!-- Empty Space -->
                                             <div class="pt-1"></div>
                                             <!--/ Empty Space -->
                                             <p class="sm-font-size text-dark-gray text-center text-lg-left">
-                                                Praesent mollis, massa in auctor molestie, magna lorem semper mauris.
+                                                En productivité, marketing, finance, création de communauté
                                             </p>
                                         </div>
                                     </div>
@@ -148,13 +171,13 @@
                                         </div>
                                         <div class="col-12 col-lg-9 pl-lg-0">
                                             <h3 class="base-font-size font-weight__700 mb-0 text-center text-lg-left">
-                                                La destination sur mesure
+                                                Des outils utiles
                                             </h3>
                                             <!-- Empty Space -->
                                             <div class="pt-1"></div>
                                             <!--/ Empty Space -->
                                             <p class="sm-font-size text-dark-gray text-center text-lg-left">
-                                                Praesent mollis, massa in auctor molestie, magna lorem semper mauris.
+                                                Pour monter son site, se lancer sans argent, encaisser des paiements ...
                                             </p>
                                         </div>
                                     </div>
@@ -170,13 +193,13 @@
                                         </div>
                                         <div class="col-12 col-lg-9 pl-lg-0">
                                             <h3 class="base-font-size font-weight__700 mb-0 text-center text-lg-left">
-                                               Vos reves, notre objectif
+                                               Pour briller
                                             </h3>
                                             <!-- Empty Space -->
                                             <div class="pt-1"></div>
                                             <!--/ Empty Space -->
                                             <p class="sm-font-size text-dark-gray text-center text-lg-left">
-                                                Praesent mollis, massa in auctor molestie, magna lorem semper mauris.
+                                                Des news, fun facts pour ta culture entrepreneuriale (et briller en HH)
                                             </p>
                                         </div>
                                     </div>
@@ -197,13 +220,13 @@
                             <div class="col-12">
                                 <div class="text-center">
                                     <h2 class="lg-font-size font-weight__700 text-blue">
-                                        En bonus, et pour te remercier de rejoindre la communauté des étudiants-entrepreneurs de l’Em Lyon
+                                        Pour bien commencer ton aventure, découvre les bases et rencontre d’autres personnes comme toi :)
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="pt-1"></div>
                                     <!--/ End Empty Space -->
                                     <p class="text-dark-gray md-font-size text-blue">
-                                        On t’offre le guide des ressources qui nous ont aidé à franchir le premier cap
+                                        On est gentil, on aime les bières, les punchlines de Booba et le fromage.
                                     </p>
                                 </div>
                                 <!-- Empty Space -->
@@ -218,7 +241,7 @@
                                             <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size" placeholder="Rentre ton e-mail...">
                                         </div>
                                         <div class="col-12 col-md-4 pl-md-0 mt-3 mt-md-0">
-                                            <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size">Entreprendre</button>
+                                            <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size">Cul-sec</button>
                                         </div>
                                     </div>
                                     <div class="text-center text-md-left sm-font-size text-gray">Gratuit et span-free</div>
@@ -238,12 +261,8 @@
                 <div class="row no-gutters">
                     <div class="col-12">
                         <div class="row align-items-center">
-                            <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-                                <div class="text-center">
-                                    <img src="assets/images/emotr.jpg" class="img-fluid" alt="Feature Image">
-                                </div>
-                            </div>
-                            <div class="col-12 col-lg-4 mx-lg-auto">
+
+                            <div class="col-12 mx-lg-auto">
                                 <div class="text-center text-lg-left">
                                     <h2 class="xxl-font-size font-weight__700 text-blue">
                                        Manifesto
@@ -252,23 +271,98 @@
                                     <div class="sm-space"></div>
                                     <!-- Empty Space -->
                                     <p class="base-plus-font-size text-blue text-justify">
-                                        Nous sommes quelques étudiants de l’em passionnés par l’entrepreneuriat. Nous avons tous participé et lancé des projets entrepreneuriaux qui ont réussi ou échoué, lors desquels nous avons autant galéré qu’apprécié. Puis nous sommes rentrés à l’em. Et là, grosse déconvenue : l’école des entrepreneurs n’a pas de communauté ! Dès lors, on a le choix de ne rien faire et laisser mourir ce souhait d’entreprendre … Ou alors on peut s’organiser entre nous, se réunir et se former.
+                                        Nous sommes quelques étudiants de l’em passionnés par l’entrepreneuriat.
+                                    </p>
+                                    <p class="base-plus-font-size text-blue text-justify">
+                                      Nous avons tous participé et lancé des projets entrepreneuriaux qui ont réussi ou échoué, lors desquels nous avons autant galéré qu’apprécié.
+
+                                      Puis nous sommes rentrés à l’em. Et là, grosse déconvenue : l’école des entrepreneurs n’a pas de communauté !
 
                                     </p>
-                                </div>
-                                <!-- Empty Space -->
-                                <div class="md-space"></div>
-                                <!--/ End Empty Space -->
-                                <div class="text-center text-lg-left text-blue">
-                                    <a href="#" class="text-blue btn btn-lg btn-primary base-plus-font-size py-3 px-3 font-weight__700">Rejoindre la bande</a>
+                                    <p class="base-plus-font-size text-blue text-justify">
+                                      Au quotidien, c’est difficile de rencontrer des gens qui partagent tes rêves secrets. En plus, l’incubateur est payant, il n’y a pas de track  entrepreneuriat et très peu d’événements dédiés.
+
+                                      Dès lors, on a le choix de ne rien faire et laisser mourir ce souhait d’entreprendre. Ou de se motiver en solo, dans son coin, mais c'est frustrant et un peu triste.
+
+                                      <strong>Ou alors on peut s’organiser entre nous, se réunir et se former.</strong>
+                                    </p>
+
+                                    <p class="base-plus-font-size text-blue text-justify">
+                                      Ou alors on peut s’organiser entre nous, se réunir et se former.
+
+                                      C’est pour cela qu’on te propose cette <strong>Newsletter Station L</strong>
+                                    </p>
+                                    <p class="base-plus-font-size text-blue text-justify">
+                                      Reçois une fois par semaine le seul mail qui te parle d'entreprendre en étudiant  :
+
+                                      <ul class="base-plus-font-size text-blue text-justify">
+                                        <li>
+                                           Du contenu de qualité toutes les semaines : des articles, vidéos et ressources adaptés pour progresser au quotidien en productivité, marketing, entrepreunariat et se libérer de ce sentiment ‘Pff, j’aimerais bien, mais par où commencer ?’
+                                        </li>
+                                        <li>
+                                          Des études de cas afin de comprendre le fonctionnement d’une entreprise pour s’en inspirer et mieux saisir les grands principes de l’entrepreneuriat
+                                        </li>
+                                        <li>
+                                          Funny Facts et histoires entrepreneuriales. Que tu veuilles trouver ton stage en Start Up ou briller au HH, découvre les essentiels du monde entrepreneurial … Et nourri ton intérêt !
+                                        </li>
+                                        <li>
+                                          Les nouvelles de la semaine pour t’inspirer : tiens toi informé des dernières nouvelles et innovations histoire de développer ton expertise
+                                        </li>
+                                        <li>
+                                          Profite de la communauté : connecte avec des étudiants comme toi, échange tes talents avec d’autres, propose ton projet et trouve des cofondateurs
+                                        </li>
+                                        <li>
+                                          Profite des événements dessinés sur mesure
+                                          Et amuse toi aux soirées ! Partying is a serious business
+                                        </li>
+                                      </ul>
+                                    </p>
                                 </div>
 
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="feature section bg-white">
+                    <div class="container">
+                        <div class="row no-gutters">
+                            <div class="col-12">
+                                <div class="row align-items-center">
+                                    <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+                                        <div class="text-center">
+                                            <img src="assets/images/emotr.jpg" class="img-fluid" alt="Feature Image">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-lg-4 mx-lg-auto">
+                                        <div class="text-center text-lg-left">
+                                            <h2 class="xxl-font-size font-weight__700 text-blue">
+                                               Pay-Foward
+                                            </h2>
+                                            <!-- Empty Space -->
+                                            <div class="sm-space"></div>
+                                            <!-- Empty Space -->
+                                            <p class="base-plus-font-size text-blue text-justify">
+                                                Maintenant, on veut vraiment partager avec toi tout ce qu’on a appris et te faire réaliser que tu n’es pas tout seul. Nous sommes beaucoup, mais nous ne le savons pas. Là, c’est l’opportunité de rencontrer des étudiants comme toi : ambitieux, attirés par la performance et désireux de lancer un projet (à court ou plus long terme).
+
+                                            </p>
+                                        </div>
+                                        <!-- Empty Space -->
+                                        <div class="md-space"></div>
+                                        <!--/ End Empty Space -->
+                                        <div class="text-center text-lg-left text-blue">
+                                            <a href="#" class="text-blue btn btn-lg btn-primary base-plus-font-size py-3 px-3 font-weight__700">Rejoindre la bande</a>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
         <!--/ End Feature -->
         <!-- Feature -->
         <section class="feature section bg-white pb-0">
