--- a/index.html
+++ b/index.html
@@ -284,14 +284,17 @@
 
                                       Dès lors, on a le choix de ne rien faire et laisser mourir ce souhait d’entreprendre. Ou de se motiver en solo, dans son coin, mais c'est frustrant et un peu triste.
 
-                                      <strong>Ou alors on peut s’organiser entre nous, se réunir et se former.</strong>
                                     </p>
 
                                     <p class="base-plus-font-size text-blue text-justify">
-                                      Ou alors on peut s’organiser entre nous, se réunir et se former.
+                                      <strong>Ou alors on peut s’organiser entre nous, se réunir et se former.</strong>
 
+
+                                    </p>
+                                    <p class="base-plus-font-size text-blue text-justify">
                                       C’est pour cela qu’on te propose cette <strong>Newsletter Station L</strong>
                                     </p>
+
                                     <p class="base-plus-font-size text-blue text-justify">
                                       Reçois une fois par semaine le seul mail qui te parle d'entreprendre en étudiant  :
 
