mailchimp de ses morts

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 
 <body class="text-black base-font-size">
@@ -59,13 +60,15 @@
                                    <!--  <div class="text-center text-lg-left">
                                         <a href="#" class="text-blue btn btn-lg btn-primary base-plus-font-size font-weight__700 py-3 px-5">Get started now</a>
                                     </div> -->
-                                    <form>
+
+                                    <!--End mc_embed_signup-->
+                                    <form action="https://stationl.us19.list-manage.com/subscribe/post?u=0ea66fb1b6e9b423f966ed5ab&amp;id=a55042a2e5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                         <div class="row">
                                             <div class="col-12 col-md-8" style="font-size: 112.5% !important">
-                                                <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size" placeholder="Rentre ton e-mail...">
+                                                <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size required email" placeholder="Rentre ton e-mail..." value="" name="EMAIL" id="mce-EMAIL">
                                             </div>
                                             <div class="col-12 col-md-4 pl-md-0 mt-3 mt-md-0">
-                                                <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size">Entreprendre</button>
+                                                <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Entreprendre</button>
                                             </div>
                                         </div>
                                         <div class="xs-font-size text-center text-lg-left text-gray">Sans engagement - Sans carte bleue</div>
@@ -235,13 +238,13 @@
                                 <!-- Empty Space -->
                                 <div class="md-space"></div>
                                 <!--/ End Empty Space -->
-                                <form>
+                                <form action="https://stationl.us19.list-manage.com/subscribe/post?u=0ea66fb1b6e9b423f966ed5ab&amp;id=a55042a2e5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                     <div class="row">
                                         <div class="col-12 col-md-8">
-                                            <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size" placeholder="Rentre ton e-mail...">
+                                            <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size" placeholder="Rentre ton e-mail..." value="" name="EMAIL" id="mce-EMAIL">
                                         </div>
                                         <div class="col-12 col-md-4 pl-md-0 mt-3 mt-md-0">
-                                            <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size">Cul-sec</button>
+                                            <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Cul-sec</button>
                                         </div>
                                     </div>
                                     <div class="text-center text-md-left sm-font-size text-gray">Gratuit et span-free</div>
@@ -357,7 +360,9 @@
                                         <div class="md-space"></div>
                                         <!--/ End Empty Space -->
                                         <div class="text-center text-lg-left text-blue">
-                                            <a href="#" class="text-blue btn btn-lg btn-primary base-plus-font-size py-3 px-3 font-weight__700">Rejoindre la bande</a>
+                                          <form action="https://stationl.us19.list-manage.com/subscribe/post?u=0ea66fb1b6e9b423f966ed5ab&amp;id=a55042a2e5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                            <button class="text-blue btn btn-lg btn-primary base-plus-font-size py-3 px-3 font-weight__700" type="submit" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Rejoindre la bande</button>
+                                          </form>
                                         </div>
 
                                     </div>
@@ -444,7 +449,9 @@
                                 <div class="sm-space"></div>
                                 <!--/ End Empty Space -->
                                 <div class="text-center">
-                                    <a href="#" class="btn btn-lg btn-primary md-font-size py-3 px-4 font-weight__700 text-blue">Decouvrir gratuitement</a>
+                                  <form action="https://stationl.us19.list-manage.com/subscribe/post?u=0ea66fb1b6e9b423f966ed5ab&amp;id=a55042a2e5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                    <button class="btn btn-lg btn-primary md-font-size py-3 px-4 font-weight__700 text-blue" type="submit" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Decouvrir gratuitement</button>
+                                  </form>
                                 </div>
                             </div>
                         </div>
@@ -463,23 +470,7 @@
                         <div class="row">
                             <div class="col-10 mx-auto col-lg-8">
                                 <div class="row">
-                                    <ul class="nav col flex-column sm-font-size">
-                                        <li class="nav-link nav-head text-uppercase font-weight__500 text-black base-font-size font-family-secondary">Company</li>
-                                        <li class="nav-item"><a href="#" class="nav-link text-black">Features</a></li>
-                                        <li class="nav-item"><a href="#" class="nav-link text-black">Pricing</a></li>
-                                    </ul>
-                                    <ul class="nav col flex-column sm-font-size">
-                                        <li class="nav-link nav-head text-uppercase font-weight__500 text-black base-font-size font-family-secondary">Support</li>
-                                        <li class="nav-item"><a href="#" class="nav-link text-black">Help</a></li>
-                                        <li class="nav-item"><a href="#" class="nav-link text-black">FAQ</a></li>
-                                        <li class="nav-item"><a href="#" class="nav-link text-black">Contact</a></li>
-                                    </ul>
-                                    <ul class="nav col flex-column sm-font-size">
-                                        <li class="nav-link nav-head text-uppercase font-weight__500 text-black base-font-size font-family-secondary">Legal</li>
-                                        <li class="nav-item"><a href="#" class="nav-link text-black">Terms</a></li>
-                                        <li class="nav-item"><a href="#" class="nav-link text-black">Privacy</a></li>
-                                        <li class="nav-item"><a href="#" class="nav-link text-black">Policy</a></li>
-                                    </ul>
+
                                 </div>
                             </div>
                         </div>
@@ -493,7 +484,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="copyright xs-font-size text-center text-black">
-                                    © 2018. All Rights Reserved.
+                                    © 2018. Made with ❤️ in Paris by <a href="https://www.karlraf.co/" target="_blank">me</a>
                                 </div>
                             </div>
                         </div>
@@ -515,6 +506,14 @@
 
     <!-- Main Script -->
     <script src="assets/js/main.js"></script>
+
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script>
+      var button = document.getElementById("mc-embedded-subscribe");
+      button.addEventListener("click", function() {swal("Bien ouej!", "Ton inscription est prise en compte, check tes mails!", "success")});
+    </script>
+    <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);
+  </script>
 
 </body>
 
