--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <title>Station L</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125697360-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-125697360-2');
+    </script>
+
+    <meta name="description" content="La seule newsletter par des étudiants ENTREPRENEURS pour des étudiants ENTREPRENANTS">
+    <!-- Open Graph data -->
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article:
+    http://ogp.me/ns/article#">
+    <meta property="og:title" content="Station L" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://stationl.co/" />
+    <meta property="og:description" content="La seule newsletter par des étudiants ENTREPRENEURS pour des étudiants ENTREPRENANTS" />
 
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400" crossorigin="anonymous">
