--- a/index.html
+++ b/index.html
@@ -30,9 +30,30 @@
     <meta property="og:url" content="https://stationl.co/" />
     <meta property="og:description" content="La seule newsletter par des étudiants ENTREPRENEURS pour des étudiants ENTREPRENANTS" />
 
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:500,700" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Vesper+Libre" rel="stylesheet">
+
+
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
@@ -121,10 +142,10 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="text-center">
-                                    <h2 class="xl-font-size font-weight__700 text-blue">
-                                        Tu aimerais dédier ton temps libre à autre chose que les Happy Hour et découvrir comment l'entrepreneuriat peut t'aider à t'épanouir pleinement ?
+                                    <h2 class="l-font-size font-weight__700 text-blue">
+                                        Tu aimerais dédier ton temps libre à autre chose que la corpo fi et découvrir comment l'entrepreneuriat peut t'aider à t'épanouir pleinement ?
                                     </h2>
-                                    <h2 class="xl-font-size font-weight__700 text-blue">
+                                    <h2 class="l-font-size font-weight__700 text-blue">
 
                                         Alors ARRÊTE TOUT - Parce que tu es à l’endroit idéal pour connecter avec des étudiants qui veulent se former et porter leur projet
                                     </h2>
@@ -248,7 +269,7 @@
                                     <div class="pt-1"></div>
                                     <!--/ End Empty Space -->
                                     <p class="text-dark-gray md-font-size text-blue">
-                                        On est gentil, on aime les bières, les punchlines de Booba et le fromage.
+                                        On est gentil, on aime les bières, le fromage, les punchlines de Booba.
                                     </p>
                                 </div>
                                 <!-- Empty Space -->
@@ -328,7 +349,7 @@
                                           Des études de cas afin de comprendre le fonctionnement d’une entreprise pour s’en inspirer et mieux saisir les grands principes de l’entrepreneuriat
                                         </li>
                                         <li>
-                                          Funny Facts et histoires entrepreneuriales. Que tu veuilles trouver ton stage en Start Up ou briller au HH, découvre les essentiels du monde entrepreneurial … Et nourri ton intérêt !
+                                          Fun Facts et histoires entrepreneuriales. Que tu veuilles trouver ton stage en Start Up ou briller au HH, découvre les essentiels du monde entrepreneurial … Et nourri ton intérêt !
                                         </li>
                                         <li>
                                           Les nouvelles de la semaine pour t’inspirer : tiens toi informé des dernières nouvelles et innovations histoire de développer ton expertise
@@ -365,7 +386,7 @@
                                     <div class="col-12 col-lg-4 mx-lg-auto">
                                         <div class="text-center text-lg-left">
                                             <h2 class="xxl-font-size font-weight__700 text-blue">
-                                               Pay-Foward
+                                               Pay it Foward
                                             </h2>
                                             <!-- Empty Space -->
                                             <div class="sm-space"></div>
