--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://stationl.co/" />
     <meta property="og:description" content="La seule newsletter par des étudiants ENTREPRENEURS pour des étudiants ENTREPRENANTS" />
+    <meta property="og:image" content="http://www.stationl.co/assets/images/stationl.png" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
