--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NP8K373');</script>
+    <!-- End Google Tag Manager -->
+
     <meta name="description" content="La seule newsletter par des étudiants ENTREPRENEURS pour des étudiants ENTREPRENANTS">
     <!-- Open Graph data -->
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article:
@@ -93,6 +101,10 @@
 </head>
 
 <body class="text-black base-font-size">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP8K373"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
     <div class="wrapper mx-auto h-100">
         <div class="cover">
