--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                     <form action="https://stationl.us19.list-manage.com/subscribe/post?u=0ea66fb1b6e9b423f966ed5ab&amp;id=a55042a2e5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                         <div class="row">
                                             <div class="col-12 col-md-8" style="font-size: 112.5% !important">
-                                                <input type="email" class="w-100 form-control rounded border-color-light-gray sm-font-size required email" placeholder="Rentre ton e-mail..." value="" name="EMAIL" id="mce-EMAIL">
+                                                <input type="email" class="w-150 form-control rounded border-color-light-gray sm-font-size required email" placeholder="Rentre ton e-mail..." value="" name="EMAIL" id="mce-EMAIL">
                                             </div>
                                             <div class="col-12 col-md-4 pl-md-0 mt-3 mt-md-0">
                                                 <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Entreprendre</button>
@@ -169,11 +169,11 @@
                             <div class="col-12">
                                 <div class="text-center">
                                     <h2 class="l-font-size font-weight__700 text-blue">
-                                        Tu aimerais dédier ton temps libre à autre chose que la corpo fi et découvrir comment l'entrepreneuriat peut t'aider à t'épanouir pleinement ?
+                                        Comment l'entrepreneuriat peut t'aider à t'épanouir pleinement ?
                                     </h2>
                                     <h2 class="l-font-size font-weight__700 text-blue">
 
-                                        Alors ARRÊTE TOUT - Parce que tu es à l’endroit idéal pour connecter avec des étudiants qui veulent se former et porter leur projet
+                                        Comment se connecter avec des étudiants qui veulent se former et porter leur projet ?
                                     </h2>
 
                                 </div>
@@ -191,7 +191,7 @@
                             <div class="col-12">
                                 <div class="text-center">
                                     <h2 class="xxl-font-size font-weight__700 text-blue">
-                                        Tu souhaiterais te former sur le sujet mais tu ne sais pas à qui faire confiance parmis tous ces sites de ‘pseudo experts’?
+                                        Tu souhaiterais te former sur le sujet mais tu ne sais pas à qui faire confiance ?
 
 
                                     </h2>
@@ -313,7 +313,7 @@
                                             <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Cul-sec</button>
                                         </div>
                                     </div>
-                                    <div class="text-center text-md-left sm-font-size text-gray">Gratuit et span-free</div>
+                                    <div class="text-center text-md-left sm-font-size text-gray">Gratuit et spam-free</div>
                                 </form>
                                 <!-- Empty Space -->
                                 <div class="md-space"></div>
