--- a/index.html
+++ b/index.html
@@ -106,18 +106,22 @@
     <div class="wrapper mx-auto h-100">
         <div class="cover">
             <!-- Hero -->
-            <section class="hero position-relative jumbotron jumbotron-fluid bg-white h-100 mb-0">
+            <section class="hero position-relative jumbotron jumbotron-fluid bg-white h-100 mb-0" style="min-height: 500px !important;">
                 <div class="container hero-inner h-100">
                     <div class="row no-gutters align-items-center h-100">
                         <div class="col-12 col-lg-5 mr-lg-auto">
                             <div class="row align-items">
-                                <div class="col-12">
+                                <div class="col-12" style="min-height: 300px !important;">
                                     <div class="text-center text-lg-left text-blue">
                                       <div id="typed-strings">
                                           <h1>La seule newsletter par des étudiants <strong>entrepreneurs</strong></h1>
-                                          <h1>Pour des étudiants <strong>entreprenants</strong>.</h1>
                                       </div>
-                                        <span id="typed2" class="xxxl-font-size font-weight__700"></span>
+                                      <div id="typed-strings-2">
+                                          <h1>Pour des étudiants <strong>entreprenant</strong>.</h1>
+                                      </div>
+                                      <h1><span id="typed2"></span></h1>
+
+                                      <h1><span id="typed3"></span></h1>
 
                                     </div>
                                     <!-- Empty Space -->
@@ -128,7 +132,8 @@
                                     </div> -->
 
                                     <!--End mc_embed_signup-->
-                                    <form action="https://stationl.us19.list-manage.com/subscribe/post?u=0ea66fb1b6e9b423f966ed5ab&amp;id=a55042a2e5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+                                    <form action="https://stationl.us19.list-manage.com/subscribe/post?u=0ea66fb1b6e9b423f966ed5ab&amp;id=a55042a2e5" method="post" id="mc-embedded-subscribe-form" style="position:absolute;bottom:0;" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                         <div class="row">
                                             <div class="col-12 col-md-8" style="font-size: 112.5% !important">
                                                 <input type="email" class="w-150 form-control rounded border-color-light-gray sm-font-size required email" placeholder="Rentre ton e-mail..." value="" name="EMAIL" id="mce-EMAIL">
@@ -579,11 +584,20 @@
     <script>
       var typed2 = new Typed('#typed2', {
           stringsElement: '#typed-strings',
-          typeSpeed: 143,
+          typeSpeed: 120,
           smartBackspace: true,
-          backSpeed: 50,
-          fadeOut: false,
-          loop: true
+          backSpeed: 30,
+          fadeOut: true,
+          loop: false
+          });
+
+     var typed3 = new Typed('#typed3', {
+          stringsElement: '#typed-strings-2',
+          typeSpeed: 120,
+          startDelay: 9500,
+          backSpeed: 30,
+          fadeOut: true,
+          loop: false
           });
     </script>
 
