--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                                       <div id="typed-strings-2">
                                           <h1>Pour des étudiants <strong>entreprenant</strong>.</h1>
                                       </div>
-                                      <h1><span id="typed2"></span></h1>
+                                      <h1 class="xl-font-size font-weight__500"><span id="typed2"></span></h1>
 
-                                      <h1><span id="typed3"></span></h1>
+                                      <h1 class="xl-font-size font-weight__500"><span id="typed3"></span></h1>
 
                                     </div>
                                     <!-- Empty Space -->
@@ -173,12 +173,11 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="text-center">
-                                    <h2 class="l-font-size font-weight__700 text-blue">
-                                        Comment l'entrepreneuriat peut t'aider à t'épanouir pleinement ?
+                                    <h2 class="l-font-size font-weight__500 text-blue">
+                                        Comment l'entrepreneuriat peut <strong>t'aider à t'épanouir pleinement</strong> ?
                                     </h2>
-                                    <h2 class="l-font-size font-weight__700 text-blue">
-
-                                        Comment se connecter avec des étudiants qui veulent se former et porter leur projet ?
+                                    <h2 class="l-font-size font-weight__500 text-blue">
+                                        Comment se connecter avec des étudiants qui veulent <strong> se former et porter leur projet</strong>?
                                     </h2>
 
                                 </div>
